--- a/vignettes/getting-started.Rmd
+++ b/vignettes/getting-started.Rmd
@@ -79,13 +79,15 @@ graph <-
 ```{r}
 library(DiagrammeR)
 subgraph <- 
-  graph$graph %>% 
+  graph@graph %>% 
     select_nodes(vocabulary_id == "HemOnc") %>%
     trav_out_edge() %>%
     transform_to_subgraph_ws() 
 
 create_legend(subgraph)
 
-render_graph(subgraph)
+render_graph(subgraph,
+             width = 1500,
+             height = 1500)
 ```
 
